# mcp_server_context7

./: .gitignore  LICENSE  README.md  README.zh.md  __main__.py  install.sh  kickoff.instructions.prompt.md  mcp_server_context7.py  pyproject.toml
.todo_tasks/: 20260119_mcp_sync_from_ts.json
tests/: test_mcp_server.py
