[project]
name = "mcp-server-context7"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server providing access to Context7 API for searching and downloading library documentation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "context7", "documentation", "api", "library", "as-is", "community"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]

dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.25.0",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.910",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp_server_context7"
Repository = "https://github.com/yourusername/mcp_server_context7"
Documentation = "https://github.com/yourusername/mcp_server_context7#readme"
Issues = "https://github.com/yourusername/mcp_server_context7/issues"

[project.scripts]
mcp-server-context7 = "mcp_server_context7:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
